[project]
name = "newestver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "attrs==26.1.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "davey==0.1.5",
    "discord-py==2.7.1",
    "frozenlist==1.8.0",
    "idna==3.13",
    "multidict==6.7.1",
    "propcache==0.4.1",
    "pycparser==2.22",
    "pynacl==1.5.0",
    "python-dotenv==1.1.1",
    "requests==2.32.3",
    "typing-extensions==4.15.0",
    "urllib3==2.3.0",
    "yarl==1.23.0",
    "yt-dlp==2026.3.17",
]
